@@ -1,3 +1,7 @@
+2006-07-20 Erwann Chenede - <erwann.chenede@sun.com>
+
+  * gtk-engine/nimbus_style.c: fix for gaim crash 6446921
+
 2006-06-02 Erwann Chenede - <erwann.chenede@sun.com>
 
   * a lot of fixes :)
